objects/Invoices__c.object
<CustomObject>
    <fields>
        <fullName>Auto_email_disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box, if you do not want automated overdue email notifications to be sent to the customer.</inlineHelpText>
        <label>Auto email disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Total_Invoice_Amount__c + Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Days_Outstanding__c</fullName>
        <description>Days Since Invoiced</description>
        <formula>IF( Balance__c &lt;=0,0, TODAY() - DATE(YEAR(TxnDate__c),MONTH(TxnDate__c),DAY(TxnDate__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Detail__c</fullName>
        <description>Invoice Detail</description>
        <label>Invoice Detail</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <externalId>true</externalId>
        <label>Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <description>Payment Terms from the Opportunity. Inserted in Invoice to be used for the email rules.</description>
        <formula>Text(Opportunity__r.Terms_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Payment Terms from the associated Opportunity</inlineHelpText>
        <label>Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payments__c</fullName>
        <description>Total Payments</description>
        <label>Payments</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quickbooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Amount__c</fullName>
        <description>Total Invoice Amount</description>
        <label>Total Invoice Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TxnDate__c</fullName>
        <description>Due Date of the invoice</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Payments__c</columns>
        <columns>Balance__c</columns>
        <columns>Days_Outstanding__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Invoices</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>